Add /password/{user_id} path
