# nikoniko/api.py
@@ -8,6 +8,7 @@ import bcrypt
 from sqlalchemy.orm import aliased
 from falcon import HTTP_404
 from falcon import HTTP_401
+from falcon import HTTP_204
 
 from nikoniko.entities import Session
 from nikoniko.entities import User, user_schema, users_schema
@@ -65,6 +66,26 @@ def token_verify(token):
 token_key_authentication = \
     hug.authentication.token(  # pylint: disable=no-value-for-parameter
         token_verify)
+
+
+@hug.put('/password/{user_id}', requires=token_key_authentication)
+def password(user_id: hug.types.number, password: hug.types.text, response, authenticated_user: hug.directives.user):
+    '''Update a users' password '''
+    try:
+        found_user = session.query(User).filter_by(user_id=user_id).one()
+    except:
+        response.status = HTTP_404
+        return None
+    logger.debug('user_id: {}, authenticated_user: {}'.format(user_id, authenticated_user))
+    if user_id != authenticated_user['user']:
+        response.status = HTTP_401
+        return 'Authenticated user isn\'t allowed to update the password for requested user'
+    found_user.password_hash=bcrypt.hashpw(
+        password.encode(),
+        bcrypt.gensalt()).decode()
+    session.add(found_user)
+    session.commit()
+    response.status = HTTP_204
 
 
 @hug.get('/users/{user_id}', requires=token_key_authentication)
